--- a/ext/manifest.json
+++ b/ext/manifest.json
@@ -13,10 +13,10 @@
   ],
   "author": "howardliu.go@outlook.com",
   "background": {
-    "service_worker": "js/background.js"
+    "service_worker": "src/background/service-worker.js"
   },
   "action": {
-    "default_popup": "options/options.html"
+    "default_popup": "src/options/index.html"
   },
   "content_scripts": [
     {
@@ -24,17 +24,28 @@
         "<all_urls>"
       ],
       "js": [
-        "js/content.js"
+        "src/content/content.js"
       ]
     }
   ],
   "options_ui": {
-    "page": "options/options.html",
+    "page": "src/options/index.html",
     "open_in_tab": true
   },
   "icons": {
-    "16": "icons/favicon-16x16.png",
-    "32": "icons/favicon-32x32.png",
-    "96": "icons/favicon-96x96.png"
-  }
+    "16": "public/icons/favicon-16x16.png",
+    "32": "public/icons/favicon-32x32.png",
+    "96": "public/icons/favicon-96x96.png"
+  },
+  "web_accessible_resources": [
+    {
+      "resources": [
+        "src/options/*",
+        "public/icons/*"
+      ],
+      "matches": [
+        "<all_urls>"
+      ]
+    }
+  ]
 }
