build: 构建浏览器插件和mac系统的pkg安装包

--- a/.gitignore
+++ b/.gitignore
@@ -52,4 +52,7 @@ yarn-error.log
 build/bin
 .vscode
 package-lock.json
+bin
+*.pkg
+*.pem
 # End of https://www.toptal.com/developers/gitignore/api/go,goland
